# libs-base

./: .gitignore  CMakeLists.txt  configure.ac  cross.config
Headers/Foundation/: NSBundle.h  NSObjCRuntime.h  NSThread.h  NSUUID.h  NSUserDefaults.h
Headers/GNUstepBase/: GSConfig.h
Source/: GNUmakefile  GSFFIInvocation.m  GSLocale.m  GSString.m  NSBundle.m  NSException.m  NSLog.m  NSProcessInfo.m  NSThread.m  NSURL.m  NSUUID.m  NSValue.m  config.h
Source/Additions/: NSObject+GNUstepBase.m
Source/CoreFoundation/: CFBase.h  CFBase.m  CFCalendar.h  CFRunLoop.m
Source/Foundation/android/: AndroidJNIHelper.h  AndroidJNIHelper.m  NSBundle.m  NSData.m  NSFileManager.m  NSPathUtilities.m  NSPlatform.h  NSPlatform.m  NSUbiquitousKeyValueStore.h  NSUbiquitousKeyValueStore.m  ioapi.h  ioapi.m  unzip.m
Source/ObjectiveC2/: NSBlocks.m
